# Barn-Door-Protocol

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  sdkconfig  sdkconfig.old
components/hal/: CMakeLists.txt
components/hal/include/hal/: hal_sensor.h
components/hal/src/: hal_buzzer.c  hal_gpio.c  hal_led.c  hal_sensor.c
components/system/src/: system_heartbeat.c  system_ota.c
components/wifi_mgr/include/wifi_mgr/: wifi_mgr.h
components/wifi_mgr/src/: wifi_mgr.c
door_monitor/: README.md
door_monitor/components/hal/include/hal/: hal_buzzer.h  hal_gpio.h  hal_led.h
door_monitor/components/notify/: CMakeLists.txt
door_monitor/components/notify/include/notify/: notify.h
door_monitor/components/notify/src/: notify_mqtt.c  notify_telegram.c  notify_telegram_poll.c
door_monitor/components/sensor/: CMakeLists.txt
door_monitor/components/sensor/include/sensor/: door_sensor.h
door_monitor/components/sensor/src/: door_sensor.c
door_monitor/components/system/: CMakeLists.txt
door_monitor/components/system/include/system/: system.h
door_monitor/components/system/src/: system_wdt.c
door_monitor/components/wifi_mgr/: CMakeLists.txt
door_monitor/main/: CMakeLists.txt
door_monitor/main/include/: app_config.h  app_scheduler.h  app_state.h
door_monitor/main/src/: app_scheduler.c  app_state.c
main/: Kconfig
main/src/: app_config.c  main.c
